Added tracking of changing maxTextLenght according to windowSize. Changed pagination size

--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -7,7 +7,6 @@
 .interestingFactSlide {
   @include mut.sized(387px, 416px);
   @include mut.full-rounded(33px);
-  
   z-index: 0;
   cursor: pointer;
   position: relative;
@@ -24,7 +23,6 @@
   .slideText {
     @include mut.sized(100%, 167px);
     @include mut.rounded($bottom-right: 33px, $bottom-left: 33px);
-    
     .heading {
       @include mut.rem-padded(8px, 20px, 7px, 20px);
       color: c.$accented-red-color;
@@ -83,6 +81,13 @@ and (max-width: 1024px){
     }
     .slick-dots {
       margin-bottom: 200px;
+      text-align: center; /* horizontally centers the element */
+      justify-content: center;
+      // @include mut.rem-margined(-30p x,-30px, -30px, -30px);
+
+      li button:before {
+          @include mut.sized(8px, 8px);
+      }
     }
   
   }    
@@ -108,6 +113,7 @@ and (max-width: 1024px){
       // @include mut.sized(100%, 165px);
       //  @include mut.rem-padded(1px, 2px, 5px, 0px);
       // @include mut.rem-margined(1px, 16px, 24px, 16px);
+      @include mut.rounded(0);
 
        .heading {
         @include mut.rem-padded(6px, 20px, 4px, 12px);
@@ -122,7 +128,7 @@ and (max-width: 1024px){
 
          @include mut.with-font($font-weight: 300, $font-size: 10px);
         //  line-height: f.pxToEm(18px);
-         line-height: f.pxToEm(14px);
+         line-height: f.pxToEm(15.5px);
 
        }
      } 
@@ -130,7 +136,7 @@ and (max-width: 1024px){
 
      .readMoreParagraph {
       //  @include mut.rem-padded(10px, 20px, 0px, 20px);
-      @include mut.rem-padded(4px, 20px, 0px, 12px);
+      @include mut.rem-padded(6px, 20px, 0px, 12px);
 
       @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
      }
@@ -194,7 +200,9 @@ and (min-width: 768px) and (max-width: 1023px) {
       }
      }
      .slideText {
-       @include mut.sized(100%, 105px);
+       @include mut.sized(100%, 106px);
+       @include mut.rounded(0);
+
       // @include mut.sized(100%, 165px);
       //  @include mut.rem-padded(1px, 2px, 5px, 0px);
       // @include mut.rem-margined(1px, 16px, 24px, 16px);
@@ -212,7 +220,7 @@ and (min-width: 768px) and (max-width: 1023px) {
 
          @include mut.with-font($font-weight: 300, $font-size: 10px);
         //  line-height: f.pxToEm(18px);
-         line-height: f.pxToEm(14px);
+         line-height: f.pxToEm(15.5px);
 
        }
      } 
@@ -220,7 +228,7 @@ and (min-width: 768px) and (max-width: 1023px) {
 
      .readMoreParagraph {
       //  @include mut.rem-padded(10px, 20px, 0px, 20px);
-      @include mut.rem-padded(4px, 20px, 0px, 12px);
+      @include mut.rem-padded(6px, 20px, 0px, 12px);
 
       @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
      }
@@ -245,7 +253,9 @@ and (min-width: 768px) and (max-width: 1023px) {
     @include mut.sized(210px,240px);// 344px
     // @include mut.sized(70%);// 344px
     @include mut.full-rounded(15px);
+    overflow: visible;
 
+  
       .slideImage {
         // @include mut.sized(100%, 188px);
         @include mut.sized(100%);//
@@ -254,7 +264,9 @@ and (min-width: 768px) and (max-width: 1023px) {
       }
       .slideText {
         @include mut.full-rounded(0px);
-         @include mut.sized(100%, 100px);//, 155px
+         @include mut.sized(100%, 103px);//, 155px
+         overflow: visible;
+
          //  @include mut.rem-padded(4px, 20px, 0px, 20px);
          .heading {
           //  @include mut.rem-padded(0,0,0, 15px);
@@ -267,13 +279,13 @@ and (min-width: 768px) and (max-width: 1023px) {
 // line-height: 16px;
         }
         .mainText {
-
           @include mut.with-font($font-weight: 300, $font-size: 10px);
-          line-height: f.pxToEm(14.5px);
+          line-height: f.pxToEm(16px);
         }
       } 
       .readMoreParagraph {
-         @include mut.rem-padded(4px, 20px, 0px, 12px);
+
+         @include mut.rem-padded(6px, 20px, 0px, 12px);
         @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
       }
   }
@@ -284,57 +296,4 @@ and (min-width: 768px) and (max-width: 1023px) {
         @include mut.sized(205px,240px);// 344px
   }
 }
-
-
-
-
-
- //  @media screen
-//    and (max-width: 1024px){
-//   //  and (max-width: 1024px){
-
-//     .interestingFactsSliderContainer .slick-list {
-//       @include mut.rem-padded(120px);
-//     }
-//  .interestingFactSlide {
-//    @include mut.sized(312px, 320px);//250px
-//    @include mut.full-rounded(20px);
-
-//      .slideImage {
-//        @include mut.sized(100%, 200px);//200px
-//        @include mut.rounded(20px, 20px);
-//       img{
-//         @include mut.sized(100%, 100%)
-//       }
-//      }
-//      .slideText {
-//        @include mut.sized(100%, 144px);
-//       //  @include mut.rem-padded(1px, 2px, 5px, 0px);
-//       // @include mut.rem-margined(1px, 16px, 24px, 16px);
-
-//        .heading {
-//         @include mut.rem-padded(5px, 20px, 4px, 16px);
-//          @include mut.with-font($font-weight: 500, $font-size: 14px);
-//          line-height: f.pxToEm(15px);
-//        }
-//        .mainText {
-//         //  @include mut.rem-padded(0, 20px, 0px, 20px);
-//         @include mut.rem-padded(1px, 20px, 0px, 16px);
-
-//          @include mut.with-font($font-weight: 300, $font-size: 12px);
-//          line-height: f.pxToEm(15px);
-//        }
-//      } 
-  
-    
-//      .readMoreParagraph {
-//       //  @include mut.rem-padded(10px, 20px, 0px, 20px);
-//       @include mut.rem-padded(5px, 20px, 0px, 16px);
-
-//       @include mut.with-font(ft.$roboto-font, 300, 12px, normal);        
-//      }
-//   } 
-//  }
-
-
 
