Made buttons sticky and removed space

--- a/src/features/StreetcodePage/DonateBtn/DonateBtn.styles.scss
+++ b/src/features/StreetcodePage/DonateBtn/DonateBtn.styles.scss
@@ -5,7 +5,7 @@
 
 .donateBtnContainer {
   z-index: 4;
-  @include mut.positioned-as(fixed, $bottom: 60px, $right: 40px);
+  @include mut.positioned-as(relative, $right: 40px);
   @include mut.flex-centered($direction: column);
 
   .donateBtnCircle {
@@ -30,18 +30,16 @@
   }
 }
 
-.donateBtnContainer.stopToTop {
-  position: fixed;
-  bottom: f.pxToRem(300px);
-  transition: bottom 0.1s ease-out;
-}
 @media screen and (max-width: 1024px) {
-  .donateBtnContainer.stopToTop {
-    bottom: f.pxToRem(100px);
+  .donateBtnContainer{
+    @include mut.positioned-as(relative, $right: 50px);
   }
 }
 @media screen and (max-width: 480px) {
-  .donateBtnContainer.stopToTop {
-    bottom: f.pxToRem(125px);
+  .donateBtnContainer{
+    @include mut.positioned-as(relative, $right: 10px);
+    .donateBtnCircle {
+      @include mut.circular(50px);
+    }
   }
 }
