--- a/src/app/common/components/ScrollToTopBtn/ScrollToTopBtn.styles.scss
+++ b/src/app/common/components/ScrollToTopBtn/ScrollToTopBtn.styles.scss
@@ -4,12 +4,9 @@
 @use "@sass/_utils.functions.scss" as f;
 
 .scrollToTopBtnContainer {
-  @include mut.positioned-as(fixed, $bottom: 160px, $right: 50px);
+  @include mut.positioned-as(relative, $right: 50px);
   @include mut.flex-centered();
-
   @include mut.circular(62px);
-  z-index: 4;
-
   border: 3px solid c.$accented-red-color;
   @include vnd.vendored(animation, 'btnOpacity 1s ease-in-out');
   @include vnd.vendored(transition, 'filter .5s ease');
@@ -19,19 +16,11 @@
     @include vnd.vendored(filter, '#{c.$hovered-btn-filter-color}');
   }
 }
-.scrollToTopBtnContainer.stopToTop {
-  @include mut.positioned-as(fixed, $bottom: 400px, $right: 50px);
 
-  transition: bottom 0.1s ease-out;
-}
-@media screen and (max-width: 1024px) {
-  .scrollToTopBtnContainer.stopToTop {
-    bottom: f.pxToRem(200px);
-  }
-}
 @media screen and (max-width: 480px) {
-  .scrollToTopBtnContainer.stopToTop {
-    bottom: f.pxToRem(225px);
+  .scrollToTopBtnContainer{
+    @include mut.positioned-as(relative, $right: 10px);
+    @include mut.circular(50px);
   }
 }
 .scrollToTopBtnContainer.active{
@@ -54,9 +43,3 @@
   0% { opacity: 0 }
   100% { opacity: 1 }
 }
-
-//.stickyToTop {
-//  @include mut.positioned-as(sticky, $bottom: 0px, $right: 0px);
-//  margin-bottom: f.pxToRem(15px);
-//  margin-left: f.pxToRem(10px);
-//}
