--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -3,14 +3,32 @@
 $bgImg: '@assets/images/streetcode-card/background.png';
 .streetcodeContainer {
     width: 100%;
-    overflow: hidden;
+    overflow: clip;
     @include mut.bg-image($bgImg, auto);
 }
-
+.sticky{
+    position: sticky;
+    display: flex;
+    z-index: 4;
+    bottom: f.pxToRem(50px);
+    justify-content: flex-end;
+}
+.sticky-content {
+    position: absolute;
+    bottom: f.pxToRem(5px);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: f.pxToRem(10px);
+}
 .dimmed {
     @include mut.sized(100%, 5875px);
 }
-
+@media screen and (max-width: 1024px) {
+    .streetcodeContainer {
+        @include mut.rem-padded($top: 64px);
+    }
+}
 @media screen and (max-width: 680px) {
     .streetcodeContainer{
         background-image: none;
