Finished working on Catalog Tags.
Tags on the page is done.

--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -5,6 +5,8 @@ $lighter-black-color: #1D1F23 !important;
 $transparent-color: transparent !important;
 
 $accented-gray-color: #F4F4F4 !important;
+$accented-grayish-gray-color: #FCFCFC !important;
+$accented-low-opasity-grayish-gray-color: #fcfcfcae !important;
 $text-light-gray-color: #D7D7D7 !important;
 $lighter-gray-color: #D3CDCA !important;
 $milky-white-color: #DDDDDD !important;
