--- a/src/app/common/components/modals/Sources/SourcesModal.styles.scss
+++ b/src/app/common/components/modals/Sources/SourcesModal.styles.scss
@@ -96,3 +96,72 @@ $articlesImg: "@assets/images/sources/Articles.png";
     @include mut.rem-margined($top: -15px, $bottom: 90px);
   }
 }
+
+@media (max-width: 480px) {
+
+  .sourcesModal {
+  width: 340px;
+  height: 442px;
+  }
+  
+  .mainContentContainer {
+  width: 340px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  }
+  
+  .sourcesModal .ant-modal-content {
+  height: 370px;
+  @include mut.full-rounded(20px, $overflow: visible);
+  padding: 0 !important;
+  box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: .765rem;
+    position:absolute(331px,95px);
+  }
+  
+  &::-webkit-scrollbar-thumb,
+  &::-webkit-scrollbar-track {
+    @include mut.full-rounded(10px);
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background: c.$card-scrollbar-track-color;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background: c.$accented-gray-color;
+    @include mut.rem-margined($top: -15px, $bottom: 90px);
+  }
+}
+.sectionLinksContainer {
+  height: pxToRem(392px);
+  @include mut.flexed($direction: column, $gap: 10px);
+  > * {
+    @include mut.with-font($font-weight: 300, $font-size: 15px);
+    color: c.$pure-black-color;
+    line-height: pxToEm(18px);
+  
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+  }
+  
+  .ant-modal-close {
+    @include mut.positioned-as(absolute, $left: 90%, $top: -15px);
+    @include mut.circular(40px, c.$pure-white-color); 
+    &:hover {
+      background-color: c.$modal-hover-color;
+    }
+    .ant-modal-close-x {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
