--- a/src/features/AdminPage/NewStreetcode/InterestingFactsBlock/FactsAdminModal/InterestingFactsAdminModal.style.scss
+++ b/src/features/AdminPage/NewStreetcode/InterestingFactsBlock/FactsAdminModal/InterestingFactsAdminModal.style.scss
@@ -42,34 +42,37 @@ $factImg: "@assets/images/interesting-facts/WowFacts1.png";
     padding: 25px;
     position: relative;
     left: 5%;
-    @include mut.with-font(ft.$roboto-font, 300, 20px, normal);
+    // @include mut.with-font(ft.$roboto-font, 300, 20px, normal);
     color: c.$dark-red-color;
+    @include mut.with-font(ft.$roboto-font, 300, 20px, normal);
     p{
+      @include mut.with-font(ft.$roboto-font, 300, 15px, normal) ;
+
         padding: 5px;
     }
 
     .inputBlock{
-        width: 400px;
-        height: 280px;
-         input, textarea{
-            @include mut.with-font(ft.$roboto-font, 300, 20px, normal) ;
+        // width: 400px;
+        // height: 280px;
+         input{
+            @include mut.with-font(ft.$roboto-font, 300, 18px, normal) ;
         }
         .characterCounter{
             color: c.$lighter-black-color;
-            text-align: right;
-            padding: 0;
-            @include mut.with-font(ft.$roboto-font, 300, 14px, normal) ;
+            // text-align: right;
+            // padding: 0;
+            // @include mut.with-font(ft.$roboto-font, 300, 14px, normal) ;
         }
 
         input{
             width: 60%;
         }
-        textarea{
-            height: 70%;
-            width: 100%;
-            resize: none;
+        // textarea{
+        //     height: 70%;
+        //     width: 100%;
+        //     resize: none;
 
         
-        }
+        // }
     }
 }
