art galary for admin and little changes on client side

--- a/src/features/AdminPage/NewStreetcode/ArtGallery/components/ArtGallery/ArtGalleryAdminStyles.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/ArtGallery/components/ArtGallery/ArtGalleryAdminStyles.styles.scss
@@ -74,22 +74,42 @@
 
 }
 
-.artImageWrapperAdmin {
-  
-  position: relative;  
-  &:hover {
-    cursor: pointer;
-  }
-  .imgDataFull {
-    display: none;
-    visibility: hidden;
-    opacity: 0;
-  }
-  
+.artImageWrapperAdmin{
+    position: relative;
 
-  .imgImg{
-    border-radius: pxToRem(30px);
-  }
+    &:hover {
+        cursor: pointer;
+
+        .imgDataFull {
+            visibility: visible;
+            opacity: 1;
+        }
+    }
+
+    .imgData {
+        @include mut.sized(100%,87px);
+        @include mut.positioned-as($position: absolute, $bottom: 0);
+        @include mut.colored($color: c.$pure-white-color, $bg-color: rgba(0, 0, 0, 0.5));
+        visibility: hidden;
+        opacity: 0;
+        @include vnd.vendored(transition, 'all .5s ease');
+        @include mut.rounded( $bottom-right: 30px, $bottom-left: 30px);
+        padding: pxToRem(11px) pxToRem(21px);
+    }
+
+    .imgTitle {
+        @include mut.with-font();
+        @include mut.rem-padded($bottom: 5px);
+        @include mut.truncated();
+        @include mut.with-font($font-size: 15px);
+    }
+
+    .imgDescription {
+      @include mut.with-font($font-size: 12px);
+        @include mut.truncated();
+    }
+
+    .imgImg {
+        border-radius: pxToRem(30px);
+    }
 }
-
-
