--- a/src/app/common/components/ScrollToTopBtn/ScrollToTopBtn.styles.scss
+++ b/src/app/common/components/ScrollToTopBtn/ScrollToTopBtn.styles.scss
@@ -40,5 +40,10 @@
 }
 
 @keyframes btnOpacity {
-  0% { opacity: 0 }
-  100% { opacity: 1 }
+  0% {
+    opacity: 0
+  }
+  100% {
+    opacity: 1
+  }
+}
