--- a/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
@@ -4,38 +4,96 @@
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
 
 .supportUsPage {
-    @include mut.rem-padded($top: 110px, $left: 200px, $right: 200px);
-
+    padding: 110px 12% 0;
+    height: 100vh;
+    width: 100%;
     //background-image: url(Stritcode_Backstage_p1_E2_grey.jpg);
 
-    .titleBig {
-        @include mut.rem-margined($bottom: 40px);
-        @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 96px);
-        line-height: 127px;
-        color: #F4F4F4;
+    .heading {
+        width: 75vw;
+
+        .titleBig {
+            @include mut.rem-margined($bottom: 40px);
+            @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 96px);
+            line-height: 127px;
+            color: #F4F4F4;
+        }
+
+        .titleSmall {
+            @include mut.rem-margined($bottom: 24px);
+        }
+
+        .text {
+            @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
+            @include mut.rem-margined($left: 0px, $right: 0px);
+            line-height: 23.44px;
+        }
+    }
+
+    .mainBlock {
+        .donatesPurposeBlock {
+            .heading {
+                @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
+                line-height: 42px;
+                color: #A4271B;
+            }
+
+            ul.purposeList {
+                display: inline;
+
+                li {
+                    @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
+                    @include mut.rem-margined($left: 0px, $right: 0px);
+                    line-height: 23.44px;
+                }
+            }
+
+            .bottomText {
+                @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
+                line-height: 27px;
+            }
+        }
+
+        .donateWindow {
+            @include mut.sized($height: 525px, $width: 590px);
+            
+            background: c.$pure-white-color;
+            
+            box-shadow: 0px 7px 17px 2px rgba(91, 91, 91, 0.25);
+            border-radius: 32px;
+        }
+    }
+    
+    .donateSubBlocks {
+        display: inline-block;
+        justify-content: stretch;
+
+        .block {
+
+        }
+    }
+
+    .bottomText {
+        @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
+        line-height: 42px;
+        color: #A4271B;
+    }
+
+    .supportButton {
+        height: 73px;
+
+        background: #E04031;
+        box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
+        border-radius: 14px;    
+
+        @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
+        line-height: 23px;
+        color: c.$pure-white-color;
+        text-align: center;
     }
 
     .titleSmall {
         @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
         line-height: 42px;
-
-        &.heading {
-            @include mut.rem-margined($bottom: 24px);
-        }
-    }
-
-    .text.heading {
-        @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
-        @include mut.rem-margined($left: 0px, $right: 0px);
-        line-height: 23.44px;
-    }
-
-    .donatesPurposeBlock {
-
-    }
-
-    
-    .donateSubBlocks {
-        
     }
 }
