--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalogItem/StreetcodeCatalogItem.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalogItem/StreetcodeCatalogItem.styles.scss
@@ -27,12 +27,12 @@
 
     .heading {
         @include mut.sized($width: 100%, $height: 88px);
-        
+
         display: flex;
         flex-direction: column;
         justify-content: center;
-        
-        .aliasText{
+
+        .aliasText {
             @include mut.rem-padded($left: 5px, $right: 5px, $top: 5px, $bottom: 5px);
             line-height: pxToRem(16.4px);
             font-size: 12px;
@@ -50,7 +50,42 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .relatedFigureSlide {
-        @include mut.sized($width: 165px, $height: 165px);
+    .commonCatalogItem {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+
+        .catalogItem {
+            @include mut.sized($width: 165px, $height: 165px);
+            border-radius: pxToRem(30px);
+
+        }
+
+        .catalogItemText {
+            background-color: transparent !important;
+            line-height: pxToRem(18.48px);
+            color: c.$pure-black-color;
+
+            .heading {
+                display: inline;
+                height: 100%;
+                p {
+                    font-size: 14px;
+                    color: c.$pure-black-color;
+                    padding-top: pxToRem(9px) !important;
+                }
+
+                .aliasText {
+                    line-height: pxToRem(13.2px);
+                    font-size: 10px;
+                    padding-top: pxToRem(0px )!important;;
+                }
+            }
+        }
     }
+
+    // .relatedFigureSlide {
+    //     @include mut.sized($width: 165px, $height: 165px);
+    // }
 }
