--- a/src/features/StreetcodePage/MapBlock/Map/Map.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Map/Map.styles.scss
@@ -6,11 +6,15 @@
     width: 100vw;
     position: relative;
     @media screen and (max-width: 480px) {
-      height: 360px;
+      height: 74vh;
+      width: 100vw;
+    }
+    @media (min-width: 481px) and (max-width: 1023px) {
+      height: 78vh;
       width: 100vw;
     }
     @media (min-width: 768px) and (max-width: 1024px) {
-      height: 580px;
+      height: 81vh;
       width: 100vw;
     }
   }
